--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
 
                     <li>                        
                         <a href="./index.html">
-                            <img src="./images/blank.png" width="80px" height="60px">
+                            <img src="./images/Blank.png" width="80px" height="60px">
                         </a>
                     </li>
                     <li>
                         <a href="./character.html">
-                            <img src="./images/blank.png" width="150px" height="60px">
+                            <img src="./images/Blank.png" width="150px" height="60px">
                         </a>
                     </li>
                     <li>
                         <a href="./howtoplay.html">
-                            <img src="./images/blank.png" width="150px" height="60px">
+                            <img src="./images/Blank.png" width="150px" height="60px">
                         </a>
                     </li>
                     <li>
                         <a href="./prod-info.html" class="prod-info-btn">
-                            <img src="./images/blank.png" width="230px" height="60px">
+                            <img src="./images/Blank.png" width="230px" height="60px">
                         </a>
                     </li>
 
