--- a/character.html
+++ b/character.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHARACTER</title>
+    <title>MELTY BLOOD: TYPE LUMINA</title>
     <link rel="icon" href="images/tsukihime.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
@@ -27,22 +27,22 @@
 
                     <li>                        
                         <a href="./index.html">
-                            <img src="./images/blank.png" width="80px" height="60px">
+                            <img src="./images/Blank.png" width="80px" height="60px">
                         </a>
                     </li>
                     <li>
                         <a href="./character.html">
-                            <img src="./images/blank.png" width="150px" height="60px">
+                            <img src="./images/Blank.png" width="150px" height="60px">
                         </a>
                     </li>
                     <li>
                         <a href="./howtoplay.html">
-                            <img src="./images/blank.png" width="150px" height="60px">
+                            <img src="./images/Blank.png" width="150px" height="60px">
                         </a>
                     </li>
                     <li>
                         <a href="./prod-info.html" class="prod-info-btn">
-                            <img src="./images/blank.png" width="230px" height="60px">
+                            <img src="./images/Blank.png" width="230px" height="60px">
                         </a>
                     </li>
 
